<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.lukaszpelczar.p4_udacity_musicstructureapp.MainActivity">

    <TextView
        android:id="@+id/playlists"
        style="@style/CategoryStyle"
        android:background="@color/playlistsTextView"
        android:text="@string/playlists" />

    <TextView
        android:id="@+id/songs"
        style="@style/CategoryStyle"
        android:layout_below="@id/playlists"
        android:background="@color/songsTextView"
        android:text="@string/songs" />

    <TextView
        style="@style/CategoryStyle"
        android:layout_below="@id/songs"
        android:text="@string/recently"
        android:textColor="@color/recentlyText" />

    <TextView
        style="@style/CenterTextView"
        android:text="@string/libraryDescription" />

    <LinearLayout style="@style/ButtonsLinearLayout">

        <Button
            android:id="@+id/playing"
            style="@style/Buttons"
            android:text="@string/playing" />

        <Button
            android:id="@+id/library"
            style="@style/Buttons"
            android:layout_marginLeft="@dimen/buttonMargin"
            android:layout_marginStart="@dimen/buttonMargin"
            android:text="@string/library" />

        <Button
            android:id="@+id/browse"
            style="@style/Buttons"
            android:layout_marginLeft="@dimen/buttonMargin"
            android:layout_marginRight="@dimen/buttonMargin"
            android:text="@string/browse" />

        <Button
            android:id="@+id/search"
            style="@style/Buttons"
            android:text="@string/search" />

    </LinearLayout>

</RelativeLayout>
